# geco

./: CMakeLists.txt  Makefile  Makefile.linux  README.md  alpha.c  alpha.h  arith_aux.c  arith_aux.h  common.c  common.h  context.c  context.h  defs.h  geco.c  gede.c  gfcm.c  gfcm.h  levels.c  levels.h  mem.c  msg.h  x.c
scripts/: GetHuman.sh  GetHumanGRCParse.sh
src/: buffer.h  common.c  common.h  context.c  context.h  defs.h  geco.c  levels.c  levels.h  mem.c  msg.c
